--- a/vue-second/index.html
+++ b/vue-second/index.html
@@ -14,6 +14,19 @@
   </style>
 </head>
 
+
+<!-- 
+
+  - $el, $refs, $mount()
+  - lifeCycle
+  - props (paren to child)
+  - $emit() (child to parent)
+  - Communication siblings components (event bus) => eventBus.$emit(), eventBus.on()
+    Büyük projelerde Vuex
+
+ -->
+
+
 <body>
 
   <div id="app">
