quotes project started

--- a/vue-second/index.html
+++ b/vue-second/index.html
@@ -17,12 +17,19 @@
 
 <!-- 
 
+  ** First Course Project (The monster Slayer) ve Second Course Project (Wonderful Quotes)
+
   - $el, $refs, $mount()
   - lifeCycle
   - props (paren to child)
   - $emit() (child to parent)
   - Communication siblings components (event bus) => eventBus.$emit(), eventBus.on()
     Büyük projelerde Vuex
+  - slots(component): dışardan içerik alma (on child component), child'a it stiller uygulanır,
+    içerik paret'a yazılır, child'da slot tagi kullanılır. <slot>
+  - <component>, dinamik componentler oluştururken kullanılır, Dynamic Components, silinip tekrar oluşturulurlar
+    Deactivated and Activated lifecycle hooks
+  - 
 
  -->
 
