--- a/vue-second/index.html
+++ b/vue-second/index.html
@@ -8,10 +8,8 @@
   <title>Vue Second</title>
 
   <script src="https://unpkg.com/vue@2.5.13/dist/vue.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
 
-  <style>
-    
-  </style>
 </head>
 
 
