vue form continue

--- a/vue-second/index.html
+++ b/vue-second/index.html
@@ -17,6 +17,7 @@
 
   ** First Course Project (The monster Slayer) ve Second Course Project (Wonderful Quotes)
 
+  - event modifiers !!!
   - $el, $refs, $mount()
   - lifeCycle
   - props (paren to child)
