animations and transitiyons app started

--- a/vue-second/index.html
+++ b/vue-second/index.html
@@ -76,6 +76,8 @@
      - Mixins: aynı işlevi yapan kodlar tek bir dosyada toplanır. Glabal tanımlamak tüm componentleri etkiler.
      Mixin paylaşılmış (shared) değldir. 1.componentte yapılan işlem, mixin başka component tarafından
      kullanılsa da sadece 1.yi etkiler, diğer componenti etkilemez.
+
+     - Animations and Transitions !!
       
  -->
 
