--- a/vue-second/index.html
+++ b/vue-second/index.html
@@ -78,6 +78,8 @@
      kullanılsa da sadece 1.yi etkiler, diğer componenti etkilemez.
 
      - Animations and Transitions !!
+
+     - Vue Resource !!
       
  -->
 
